Freeze mines and pathenemy graphics
Changed mine functionality so they now get "used up" when enemies move
onto them and the enemies now get frozen for x turns
Pathenemy now has its route drawn with a line, with corners and all.
Makes use of alpha images.
Editing and saving of pathenemies also improved
Bug fixes, pressing the home screen blows shit up (sometimes) again